--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "Server.js",
   "scripts": {
   "test": "echo \"No backend tests yet\"",
-   "start": "nodemon server.js"
+   "start": "node server.js"
   },
   "author": "Ch shahzad",
   "license": "ISC",
